--- a/app.json
+++ b/app.json
@@ -8,6 +8,8 @@
       "expo-router"
     ],
     "name": "jobs",
-    "slug": "jobs"
-  }
+    "slug": "jobs",
+    "sdkVersion": "49.0.0"
+  },
+  "name": "jobs"
 }
